# OpenGLCMakeBoilerplate

./: CMakeLists.txt  README.md
.github/: worflows
.github/workflows/: cmake-single-platform.yml
src/: main.cpp
